--- a/Sort-Visualizer.vcxproj.filters
+++ b/Sort-Visualizer.vcxproj.filters
@@ -48,5 +48,9 @@
   <ItemGroup>
     <None Include="shaders\DefaultShader.vert" />
     <None Include="shaders\DefaultShader.frag" />
+    <None Include=".gitignore" />
+  </ItemGroup>
+  <ItemGroup>
+    <Text Include="README.md" />
   </ItemGroup>
 </Project>
