--- a/Sort-Visualizer.vcxproj
+++ b/Sort-Visualizer.vcxproj
@@ -146,7 +146,7 @@
     <ClCompile Include="sortvisualizer\source\Sortable.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="sortvisualizer\include\HighlightColors.h" />
+    <ClInclude Include="sortvisualizer\include\VisualizerColors.h" />
     <ClInclude Include="sortvisualizer\include\Renderer.h" />
     <ClInclude Include="sortvisualizer\include\SortController.h" />
     <ClInclude Include="sortvisualizer\include\Shader.h" />
