--- a/Sort-Visualizer.vcxproj.filters
+++ b/Sort-Visualizer.vcxproj.filters
@@ -47,7 +47,7 @@
     <ClInclude Include="sortvisualizer\include\Renderer.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="sortvisualizer\include\HighlightColors.h">
+    <ClInclude Include="sortvisualizer\include\VisualizerColors.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
